--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 #Byte-compiled / Python artifacts
 *.py[cod]
 __pycache__/
+/__pycache__/
 *.so
 *.pyo
 
@@ -83,132 +84,4 @@ yarn.lock
 # pip-tools
 *.lock
 
-.staticfiles/
-/staticfiles/admin/js/actions.js
-/staticfiles/admin/js/vendor/select2/i18n/af.js
-/staticfiles/admin/js/vendor/select2/i18n/ar.js
-/staticfiles/admin/css/autocomplete.css
-/staticfiles/admin/js/autocomplete.js
-/staticfiles/admin/js/vendor/select2/i18n/az.js
-/staticfiles/admin/css/base.css
-/staticfiles/admin/js/vendor/select2/i18n/bg.js
-/staticfiles/admin/js/vendor/select2/i18n/bn.js
-/staticfiles/admin/js/vendor/select2/i18n/bs.js
-/staticfiles/admin/js/vendor/select2/i18n/ca.js
-/staticfiles/admin/js/calendar.js
-/staticfiles/admin/img/calendar-icons.svg
-/staticfiles/admin/js/cancel.js
-/staticfiles/admin/js/change_form.js
-/staticfiles/admin/css/changelists.css
-/staticfiles/admin/js/core.js
-/staticfiles/admin/js/vendor/select2/i18n/cs.js
-/staticfiles/admin/js/vendor/select2/i18n/da.js
-/staticfiles/admin/css/dark_mode.css
-/staticfiles/admin/css/dashboard.css
-/staticfiles/admin/js/admin/DateTimeShortcuts.js
-/staticfiles/admin/js/vendor/select2/i18n/de.js
-/staticfiles/flash_cards/js/deck.js
-/staticfiles/admin/js/vendor/select2/i18n/dsb.js
-/staticfiles/admin/js/vendor/select2/i18n/el.js
-/staticfiles/admin/js/vendor/select2/i18n/en.js
-/staticfiles/admin/js/vendor/select2/i18n/es.js
-/staticfiles/admin/js/vendor/select2/i18n/et.js
-/staticfiles/admin/js/vendor/select2/i18n/eu.js
-/staticfiles/admin/js/vendor/select2/i18n/fa.js
-/staticfiles/admin/js/vendor/select2/i18n/fi.js
-/staticfiles/admin/js/filters.js
-/staticfiles/admin/css/forms.css
-/staticfiles/admin/js/vendor/select2/i18n/fr.js
-/staticfiles/admin/js/vendor/select2/i18n/gl.js
-/staticfiles/admin/js/vendor/select2/i18n/he.js
-/staticfiles/admin/js/vendor/select2/i18n/hi.js
-/staticfiles/admin/js/vendor/select2/i18n/hr.js
-/staticfiles/admin/js/vendor/select2/i18n/hsb.js
-/staticfiles/admin/js/vendor/select2/i18n/hu.js
-/staticfiles/admin/js/vendor/select2/i18n/hy.js
-/staticfiles/admin/img/icon-addlink.svg
-/staticfiles/admin/img/icon-alert.svg
-/staticfiles/admin/img/icon-calendar.svg
-/staticfiles/admin/img/icon-changelink.svg
-/staticfiles/admin/img/icon-clock.svg
-/staticfiles/admin/img/icon-deletelink.svg
-/staticfiles/admin/img/icon-hidelink.svg
-/staticfiles/admin/img/icon-no.svg
-/staticfiles/admin/img/icon-unknown.svg
-/staticfiles/admin/img/icon-unknown-alt.svg
-/staticfiles/admin/img/icon-viewlink.svg
-/staticfiles/admin/img/icon-yes.svg
-/staticfiles/admin/js/vendor/select2/i18n/id.js
-/staticfiles/admin/img/inline-delete.svg
-/staticfiles/admin/js/inlines.js
-/staticfiles/admin/js/vendor/select2/i18n/is.js
-/staticfiles/admin/js/vendor/select2/i18n/it.js
-/staticfiles/admin/js/vendor/select2/i18n/ja.js
-/staticfiles/admin/js/jquery.init.js
-/staticfiles/admin/js/vendor/jquery/jquery.js
-/staticfiles/admin/js/vendor/jquery/jquery.min.js
-/staticfiles/admin/js/vendor/select2/i18n/ka.js
-/staticfiles/admin/js/vendor/select2/i18n/km.js
-/staticfiles/admin/js/vendor/select2/i18n/ko.js
-/staticfiles/admin/img/LICENSE
-/staticfiles/admin/js/vendor/select2/LICENSE.md
-/staticfiles/admin/js/vendor/jquery/LICENSE.txt
-/staticfiles/admin/js/vendor/xregexp/LICENSE.txt
-/staticfiles/admin/css/vendor/select2/LICENSE-SELECT2.md
-/staticfiles/admin/css/login.css
-/staticfiles/admin/js/vendor/select2/i18n/lt.js
-/staticfiles/admin/js/vendor/select2/i18n/lv.js
-/staticfiles/admin/js/vendor/select2/i18n/mk.js
-/staticfiles/admin/img/gis/move_vertex_off.svg
-/staticfiles/admin/img/gis/move_vertex_on.svg
-/staticfiles/admin/js/vendor/select2/i18n/ms.js
-/staticfiles/admin/css/nav_sidebar.css
-/staticfiles/admin/js/nav_sidebar.js
-/staticfiles/admin/js/vendor/select2/i18n/nb.js
-/staticfiles/admin/js/vendor/select2/i18n/ne.js
-/staticfiles/admin/js/vendor/select2/i18n/nl.js
-/staticfiles/admin/js/vendor/select2/i18n/pl.js
-/staticfiles/admin/js/popup_response.js
-/staticfiles/admin/js/prepopulate.js
-/staticfiles/admin/js/prepopulate_init.js
-/staticfiles/admin/js/vendor/select2/i18n/ps.js
-/staticfiles/admin/js/vendor/select2/i18n/pt.js
-/staticfiles/admin/js/vendor/select2/i18n/pt-BR.js
-/staticfiles/admin/img/README.txt
-/staticfiles/admin/js/admin/RelatedObjectLookups.js
-/staticfiles/admin/css/responsive.css
-/staticfiles/admin/css/responsive_rtl.css
-/staticfiles/admin/js/vendor/select2/i18n/ro.js
-/staticfiles/admin/css/rtl.css
-/staticfiles/admin/js/vendor/select2/i18n/ru.js
-/staticfiles/admin/img/search.svg
-/staticfiles/admin/css/vendor/select2/select2.css
-/staticfiles/admin/js/vendor/select2/select2.full.js
-/staticfiles/admin/js/vendor/select2/select2.full.min.js
-/staticfiles/admin/css/vendor/select2/select2.min.css
-/staticfiles/admin/js/SelectBox.js
-/staticfiles/admin/js/SelectFilter2.js
-/staticfiles/admin/img/selector-icons.svg
-/staticfiles/admin/js/vendor/select2/i18n/sk.js
-/staticfiles/admin/js/vendor/select2/i18n/sl.js
-/staticfiles/admin/img/sorting-icons.svg
-/staticfiles/admin/js/vendor/select2/i18n/sq.js
-/staticfiles/admin/js/vendor/select2/i18n/sr.js
-/staticfiles/admin/js/vendor/select2/i18n/sr-Cyrl.js
-/staticfiles/admin/js/vendor/select2/i18n/sv.js
-/staticfiles/admin/js/vendor/select2/i18n/th.js
-/staticfiles/admin/js/theme.js
-/staticfiles/admin/js/vendor/select2/i18n/tk.js
-/staticfiles/admin/img/tooltag-add.svg
-/staticfiles/admin/img/tooltag-arrowright.svg
-/staticfiles/admin/js/vendor/select2/i18n/tr.js
-/staticfiles/admin/js/vendor/select2/i18n/uk.js
-/staticfiles/admin/css/unusable_password_field.css
-/staticfiles/admin/js/unusable_password_field.js
-/staticfiles/admin/js/urlify.js
-/staticfiles/admin/js/vendor/select2/i18n/vi.js
-/staticfiles/admin/css/widgets.css
-/staticfiles/admin/js/vendor/xregexp/xregexp.js
-/staticfiles/admin/js/vendor/xregexp/xregexp.min.js
-/staticfiles/admin/js/vendor/select2/i18n/zh-CN.js
-/staticfiles/admin/js/vendor/select2/i18n/zh-TW.js
+/staticfiles/
